<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_camera_0"
        android:title="@string/camera_0" />
    <item
        android:id="@+id/action_camera_1"
        android:title="@string/camera_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera_2"
        android:title="@string/camera_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera_3"
        android:title="@string/camera_3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera_4"
        android:title="@string/camera_4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera_5"
        android:title="@string/camera_5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera_6"
        android:title="@string/camera_6"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera_7"
        android:title="@string/camera_7"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera_8"
        android:title="@string/camera_8"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera_9"
        android:title="@string/camera_9"
        app:showAsAction="never" />
</menu>