<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageViewAlertView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:background="@color/black"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/property_1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageViewAlertView"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAlertView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/property_3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/property_5"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/property_6"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/property_4"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/property_2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textViewPicDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/property_0"
        app:layout_constraintEnd_toEndOf="@+id/imageViewAlertView"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAlertView"
        tools:text="@string/property_0" />

    <TextView
        android:id="@+id/textViewRoverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/property_0"
        app:layout_constraintEnd_toEndOf="@+id/textViewPicDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewPicDate"
        tools:text="@string/property_0" />

    <TextView
        android:id="@+id/textViewCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/property_0"
        app:layout_constraintEnd_toEndOf="@+id/textViewRoverName"
        app:layout_constraintTop_toBottomOf="@+id/textViewRoverName"
        tools:text="@string/property_0" />

    <TextView
        android:id="@+id/textViewRoverStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/property_0"
        app:layout_constraintEnd_toEndOf="@+id/textViewCamera"
        app:layout_constraintTop_toBottomOf="@+id/textViewCamera"
        tools:text="@string/property_0" />

    <TextView
        android:id="@+id/textViewLaunchDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/property_0"
        app:layout_constraintEnd_toEndOf="@+id/textViewRoverStatus"
        app:layout_constraintTop_toBottomOf="@+id/textViewRoverStatus"
        tools:text="@string/property_0" />

    <TextView
        android:id="@+id/textViewLandingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/property_0"
        app:layout_constraintEnd_toEndOf="@+id/textViewLaunchDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewLaunchDate"
        tools:text="@string/property_0" />

</androidx.constraintlayout.widget.ConstraintLayout>